# darling-libnetwork

./: .gitignore  CMakeLists.txt  README.md
include/nw/: NWConcrete_nw_activity.h  NWConcrete_nw_address_endpoint.h  NWConcrete_nw_advertise_descriptor.h  NWConcrete_nw_association.h  NWConcrete_nw_authentication_challenge.h  NWConcrete_nw_authentication_credential.h  NWConcrete_nw_authentication_protection_space.h  NWConcrete_nw_bonjour_service_endpoint.h  NWConcrete_nw_browse_descriptor.h  NWConcrete_nw_browse_result.h  NWConcrete_nw_browser.h  NWConcrete_nw_connection.h  NWConcrete_nw_content_context.h  NWConcrete_nw_context.h  NWConcrete_nw_custom_endpoint.h  NWConcrete_nw_data_transfer_report.h  NWConcrete_nw_endpoint.h  NWConcrete_nw_endpoint_fallback.h  NWConcrete_nw_endpoint_flow.h  NWConcrete_nw_endpoint_handler.h  NWConcrete_nw_endpoint_mode_handler.h  NWConcrete_nw_endpoint_proxy.h  NWConcrete_nw_endpoint_resolver.h  NWConcrete_nw_endpoint_transform.h  NWConcrete_nw_error.h  NWConcrete_nw_establishment_report.h  NWConcrete_nw_ethernet_channel.h  NWConcrete_nw_fd_wrapper.h  NWConcrete_nw_framer.h  NWConcrete_nw_hostname_endpoint.h  NWConcrete_nw_interface.h  NWConcrete_nw_interface_status_monitor.h  NWConcrete_nw_interpose.h  NWConcrete_nw_link_info.h  NWConcrete_nw_listener.h  NWConcrete_nw_nat64_prefixes_resolver.h  NWConcrete_nw_pac_resolver.h  NWConcrete_nw_parameters.h  NWConcrete_nw_path.h  NWConcrete_nw_path_evaluator.h  (+205 more)
include/nw/internal/: activity.h  address_endpoint.h  advertise_descriptor.h  association.h  authentication_challenge.h  authentication_credential.h  authentication_protection_space.h  bonjour_service_endpoint.h  browse_descriptor.h  browse_result.h  browser.h  connection.h  content_context.h  context.h  custom_endpoint.h  data_transfer_report.h  endpoint.h  endpoint_fallback.h  endpoint_flow.h  endpoint_handler.h  endpoint_mode_handler.h  endpoint_proxy.h  endpoint_resolver.h  endpoint_transform.h  error.h  establishment_report.h  ethernet_channel.h  fd_wrapper.h  framer.h  hostname_endpoint.h  interface.h  interface_status_monitor.h  interpose.h  link_info.h  listener.h  nat64_prefixes_resolver.h  pac_resolver.h  parameters.h  path.h  path_evaluator.h  (+29 more)
src/: NWConcrete_nw_activity.m  NWConcrete_nw_address_endpoint.m  NWConcrete_nw_advertise_descriptor.m  NWConcrete_nw_association.m  NWConcrete_nw_authentication_challenge.m  NWConcrete_nw_authentication_credential.m  NWConcrete_nw_authentication_protection_space.m  NWConcrete_nw_bonjour_service_endpoint.m  NWConcrete_nw_browse_descriptor.m  NWConcrete_nw_browse_result.m  NWConcrete_nw_browser.m  NWConcrete_nw_connection.m  NWConcrete_nw_content_context.m  NWConcrete_nw_context.m  NWConcrete_nw_custom_endpoint.m  NWConcrete_nw_data_transfer_report.m  NWConcrete_nw_endpoint.m  NWConcrete_nw_endpoint_fallback.m  NWConcrete_nw_endpoint_flow.m  NWConcrete_nw_endpoint_handler.m  NWConcrete_nw_endpoint_proxy.m  NWConcrete_nw_endpoint_resolver.m  NWConcrete_nw_endpoint_transform.m  NWConcrete_nw_error.m  NWConcrete_nw_establishment_report.m  NWConcrete_nw_ethernet_channel.m  NWConcrete_nw_fd_wrapper.m  NWConcrete_nw_framer.m  NWConcrete_nw_hostname_endpoint.m  NWConcrete_nw_interface.m  NWConcrete_nw_interface_status_monitor.m  NWConcrete_nw_interpose.m  NWConcrete_nw_link_info.m  NWConcrete_nw_listener.m  NWConcrete_nw_nat64_prefixes_resolver.m  NWConcrete_nw_pac_resolver.m  NWConcrete_nw_parameters.m  NWConcrete_nw_path.m  NWConcrete_nw_path_evaluator.m  NWConcrete_nw_path_flow.m  (+42 more)
src/nw/: NW_URL_ENDPOINT_CLS.m  activity.m  address_endpoint.m  advertise_descriptor.m  array.m  association.m  authentication_challenge.m  authentication_credential.m  authentication_protection_space.m  bonjour_service_endpoint.m  browse_descriptor.m  browse_result.m  browser.m  channel.m  config.m  connection.m  content_context.m  context.m  custom_endpoint.m  data_transfer_report.m  dictionary.m  endpoint.m  endpoint_fallback.m  endpoint_flow.m  endpoint_handler.m  endpoint_proxy.m  endpoint_resolver.m  endpoint_transform.m  error.m  establishment_report.m  ethernet_channel.m  fd_wrapper.m  frame.m  framer.m  hash.m  hostname_endpoint.m  interface.m  interface_status_monitor.m  interpose.m  interpose_flow.m  (+61 more)
submodules/: network_cmds
